web-infras/parser/tests/fixtures/babel/core/scope/dupl-bind-class-let/output.txt
[SyntaxError]: Identifier has already been declared. (2,5)
2|let foo = 1;
 |   ^
